--- a/.github/workflows/belajar-deployment.yml
+++ b/.github/workflows/belajar-deployment.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
           push: true
           tags: rizalanggoro/belajar-deployment:latest
