--- a/.github/workflows/belajar-deployment.yml
+++ b/.github/workflows/belajar-deployment.yml
@@ -1,6 +1,6 @@
 name: belajar-deployment
-on: 
-  push: 
+on:
+  push:
     branches:
       - main
 jobs:
@@ -25,6 +25,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/arm64
+          platforms: linux/arm64,linux/amd64
           push: true
-          tags: rizalanggoro/belajar-deployment:latest-multi
+          tags: rizalanggoro/belajar-deployment:latest
